name:                gossim
version:             0.1.0.0
-- synopsis:
-- description:
license:             LGPL-3
license-file:        LICENSE
author:              Aliaksey Artamonau
maintainer:          aliaksiej.artamonau@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Gossim, Gossim.Protocol.PingPong
  other-modules:       Gossim.Internal.Agent,
                       Gossim.Internal.Logging,
                       Gossim.Internal.Random,
                       Gossim.Internal.Simulator,
                       Gossim.Internal.Simulator.Scheduler,
                       Gossim.Internal.Types
  build-depends:       base >=4.7 && <4.8, mtl >=2.1 && <2.2,
                       data-default >=0.5 && <0.6, containers >=0.5 && <0.6,
                       text >=1.1 && <1.2, text-format >=0.3 && <0.4,
                       monad-coroutine >=0.8 && <0.9,
                       mersenne-random-pure64 >=0.2 && <0.3,
                       monad-logger >=0.3 && <0.4,
                       fast-logger >=2.1 && <2.2,
                       template-haskell,
                       lens >=4.2 && <4.3,
                       pqueue >= 1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
